# Ebird

./: .gitignore  CMakeLists.txt  config.linux  profile.sh  readme.md
benchmark/: CMakeLists.txt  alexnet.cc  alexnet.h  batch_scheduler_test.cc  batch_scheduler_test.h  inceptionv4.cc  inceptionv4.h  one_resnet_152.cc  prof_incv4.cc  prof_resnet_152.cc  profiler.cc  profiler.h  resnet_101.cc  resnet_101.h  resnet_152.cc  resnet_152.h  resnet_50.cc  resnet_50.h  vgg_16.cc  vgg_16.h  vgg_19.cc  vgg_19.h
cmake/: cofig.cmake  cuda.cmake  glog.cmake
include/: batch_scheduler.h  cublas_alias.h  cuda_header.h  ebird.h  initializer.h  mem_reducer.h  network.h  registry.h  stream_singleton.h  switch.h  tensor.h
include/layer/: base_layer.h  base_network_layer.h  base_structure_layer.h  batch_normalization_layer.h  concat_layer.h  cudnn_activation_layer.h  cudnn_convolution_layer.h  cudnn_pooling_layer.h  data_layer.h  dropout_layer.h  fork_layer.h  fully_connected_layer.h  join_layer.h  local_response_norm_layer.h  padding_layer.h  softmax_layer.h
include/util/: common.h  ebird_math.h  error_util.h  log.h  mem_util.h  print_util.h
src/: CMakeLists.txt  batch_scheduler.cc  initializer.cc  mem_reducer.cc  network.cc  registry.cc  stream_singleton.cc  tensor.cc  tensor.cu
src/layer/: base_layer.cc  base_network_layer.cc  base_structure_layer.cc  batch_normalization_layer.cc  concat_layer.cc  cudnn_activation_layer.cc  cudnn_convolution_layer.cc  cudnn_pooling_layer.cc  data_layer.cc  dropout_layer.cc  fork_layer.cc  fully_connected_layer.cc  join_layer.cc  local_response_norm_layer.cc  padding_layer.cc  padding_layer.cu  softmax_layer.cc
